# MeshCompression

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: edge.rs  main.rs  mesh.rs  render.rs  shader.wgsl  triangle.rs  vertex.rs
src/mesh/: edge.rs  triangle.rs  vertex.rs
src/render/: mesh.rs  mesh_old.rs  mesh_refactor.rs
src/render/mesh/: edge.rs  triangle.rs  vertex.rs
