[package]
name = "mesh_compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.3"
image = "0.24.6"

[[bin]]
name = "mesh_compression"
path = "src/main.rs"

[profile.dev]
incremental = true

[build]
rustc = ["--build-std", "--cache", "dir=/.build"]
